; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ct_test.c_test_decode_tls_sct.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ct_test.c_test_decode_tls_sct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32, i8*, i32 }

@__const.test_decode_tls_sct.tls_sct_list = private unnamed_addr constant [123 x i8] c"\00x\00v\00\DF\1C.\C1\15\00\94RG\A9ah2]\DC\\yY\E8\F7\C6\D3\88\FC\00.\0B\BD?t\D7d\00\00\01=\DB'\DF\93\00\00\04\03\00G0E\02 H/gQ\AF5\DB\A6T6\BE\1F\D6d\0F=\BF\9AAB\94\95\92E0(\8F\A3\E5\E2>\06\02!\00\E4\ED\C0\DB:\C5r\B1\E2\F5\E8\ABjh\06S\98}\CFA\02}\FE\FF\A1\05Q\9D\89\ED\BF\08\00", align 16
@fixture = common dso_local global %struct.TYPE_2__* null, align 8
@ct_dir = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"tls1.sct\00", align 1
@result = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_decode_tls_sct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_decode_tls_sct() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [123 x i8], align 16
  %3 = bitcast [123 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %3, i8* align 16 getelementptr inbounds ([123 x i8], [123 x i8]* @__const.test_decode_tls_sct.tls_sct_list, i32 0, i32 0), i64 123, i1 false)
  %4 = call i32 (...) @SETUP_CT_TEST_FIXTURE()
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fixture, align 8
  %6 = icmp eq %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %21

8:                                                ; preds = %0
  %9 = getelementptr inbounds [123 x i8], [123 x i8]* %2, i64 0, i64 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fixture, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i8* %9, i8** %11, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fixture, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  store i32 122, i32* %13, align 8
  %14 = load i32, i32* @ct_dir, align 4
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fixture, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 8
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fixture, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 2
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %18, align 8
  %19 = call i32 (...) @EXECUTE_CT_TEST()
  %20 = load i32, i32* @result, align 4
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %8, %7
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @SETUP_CT_TEST_FIXTURE(...) #2

declare dso_local i32 @EXECUTE_CT_TEST(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
